--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
   <meta content="utf-8" http-equiv="encoding">
-  
+
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/bootstrap.css">
 
   <title>Savannah Jewels Beauty</title>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark position-fixed fixed-top">
     <a class="navbar-brand" href="/">SJB</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -26,9 +26,59 @@
       </div>
     </div>
   </nav>
-  <div class="banner">
-    
+  <div class="mt-5">
+
+    <div id="lashModelCarousel" class="carousel slide position-relative w-100 h-100" data-ride="carousel" data-interval="4000">
+      <div class="position-absolute absolute-center w-100" style="z-index: 10;">
+        <h1 class="text-white display-1 font-weight-normal">Savannah Jewels Beauty</h1>
+        <button class="btn btn-primary btn-lg">Shop Lashes</button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="images/slideshow/slideshow2.jpg" class="d-block w-100" alt="2">
+        </div>
+        <div class="carousel-item">
+          <img src="images/slideshow/slideshow3.jpg" class="d-block w-100" alt="3">
+        </div>
+        <div class="carousel-item">
+          <img src="images/slideshow/slideshow4.jpg" class="d-block w-100" alt="4">
+        </div>
+      </div>
+    </div>
+
+    <div class="jumbotron jumbotron-fluid mb-0">
+      <div class="container">
+        <h1 class="display-4">THE WOW EFFECT. ALL DAY LONG.</h1>
+        <p class="lead">I’m a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me to add your own content and make changes to the font. </p>
+        <a>Learn More</a>
+      </div>
+    </div>
+  
+    <div class="parallax" style="background-image: url(images/jewels-winter-snow.jpg);">
+      <div class="d-flex flex-column justify-content-center text-center">
+        <h1 class="text-white">Savannah Jewels Beauty</h1>
+        <button class="btn btn-primary m-auto">Shop Now</button>
+      </div>
+    </div>
+  
+    <div class="parallax" style="background-color: black;">
+      <div class="d-flex flex-column justify-content-center text-center">
+        <h1 class="text-white">Savannah Jewels Beauty</h1>
+        <button class="btn btn-primary m-auto">Shop Now</button>
+        <div class="portfolioContainer">
+          <image class="portfolioItem"  src="./images/lashOne.jpg"/>
+          <image class="portfolioItem"  src="./images/lashTwo.jpg"/>
+          <image class="portfolioItem"  src="./images/lashThree.jpg"/>
+        </div>
+      </div>
+    </div>
+
   </div>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
