Add repeating background and insta link

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
   <meta content="utf-8" http-equiv="encoding">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/bootstrap.css">
 
@@ -54,7 +54,7 @@
       </div>
     </div>
   
-    <div class="parallax parallax-repeating" style="background-image: url(images/lashbackground.jpg);">
+    <div class="parallax parallax-repeating" style="background-image: url(images/repeatinglashes.jpg);">
       <div class="position-relative w-100 h-100">
         
        
@@ -80,9 +80,12 @@
           <div class="position-absolute" style="right: 0; top: 50%; transform: translateY(-50%);">
             <div class="card bg-dark text-white" style="width: 18rem;">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-outline-primary">Go somewhere</a>
+                <h5 class="card-title">Follow Me</h5>
+                <p class="card-text">Follow to see my latest work or to stay updated on the latest deals.</p>
+                <a href="https://www.instagram.com/savannahjewelsbeauty.amara/?hl=en" class="iconButton">
+                  <i class="fa fa-instagram" style="font-size:48px;color:white"></i>
+                  <div class="cardButtonText">Follow</div>
+                </a>
               </div>
             </div>
           </div>
