--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="#">Portfolio</a>
+        <a class="nav-item nav-link" href="/portfolio.html">Portfolio</a>
         <a class="nav-item nav-link" href="#">Schedule/Pricing</a>
         <a class="nav-item nav-link" href="#">About</a>
       </div>
@@ -62,11 +62,11 @@
       </div>
     </div>
   
-    <div class="parallax" style="background-color: black;">
+    <div class="parallax" style="height: 550px; background-color: black;">
       <div class="d-flex flex-column justify-content-center text-center">
         <h1 class="display-4 text-white">Glamorous Lashes</h1>
         <button class="btn btn-outline-primary btn-lg m-auto">Shop Now</button>
-        <div class="portfolioContainer">
+        <div class="portfolioContainer" style="grid-template-rows: repeat(1, 30vw);">
           <image class="portfolioItem"  src="./images/lashOne.jpg"/>
           <image class="portfolioItem"  src="./images/lashTwo.jpg"/>
           <image class="portfolioItem"  src="./images/lashThree.jpg"/>
@@ -76,15 +76,15 @@
 
     <div class="container-fluid">
       <div class="row">
-        <div class="col-6 parallax-relative" style="background-image: url(/images/jewels-fall-leaves-copy.png);">
+        <div class="col-6 parallax-relative" style="background-image: url(/images/jewels-green-grass.jpg);">
           <div class="position-absolute" style="right: 0; top: 50%; transform: translateY(-50%);">
             <div class="card bg-dark text-white" style="width: 18rem;">
               <div class="card-body">
                 <h5 class="card-title">Follow Me</h5>
-                <p class="card-text">Follow to see my latest work or to stay updated on the latest deals.</p>
+                <p class="card-text">Follow me on instagram to see my latest work or to stay updated on the latest deals.</p>
                 <a href="https://www.instagram.com/savannahjewelsbeauty.amara/?hl=en" class="iconButton">
                   <i class="fa fa-instagram" style="font-size:48px;color:white"></i>
-                  <div class="cardButtonText">Follow</div>
+                  <div class="cardButtonText" style="color: white">Follow</div>
                 </a>
               </div>
             </div>
@@ -94,9 +94,12 @@
           <div class="position-absolute" style="left: 0; top: 50%; transform: translateY(-50%);">
             <div class="card bg-light" style="width: 18rem;">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h5 class="card-title">Like My Page</h5>
+                <p class="card-text">Like my page on Facebook to see my latest work or to stay updated on the latest deals.</p>
+                <a href="https://www.instagram.com/savannahjewelsbeauty.amara/?hl=en" class="iconButton">
+                  <i class="fa fa-facebook" style="font-size:48px;color:black"></i>
+                  <div class="cardButtonText" style="color: black">Like on facebook</div>
+                </a>
               </div>
             </div>
           </div>
