--- a/index.html
+++ b/index.html
@@ -109,6 +109,32 @@
 
   </div>
 
+  <footer class="bg-light">
+    <div class="container p-5">
+      <div class="row justify-content-around text-center">
+        <div class="col-12 col-md-6">
+          <div class="row justify-content-center">
+            <a href="https://www.instagram.com/savannahjewelsbeauty.amara/?hl=en" target="_blank" class="iconButton mx-3">
+              <i class="fa fa-instagram" style="font-size:24px;color:black"></i>
+            </a>
+            <a href="https://www.instagram.com/savannahjewelsbeauty.amara/?hl=en" target="_blank" class="iconButton mx-3">
+              <i class="fa fa-facebook" style="font-size:24px;color:black"></i>
+            </a>
+          </div>
+        </div>
+        <div class="col-12 col-md-6">
+          <div class="row justify-content-center">
+            Website Developed by Martinez & Black <span>
+              <a href="https://github.com/nmartinezbyu/SavannahJewelsBeauty/tree/master" target="_blank" class="iconButton mx-3">
+                <i class="fa fa-github" style="font-size:24px;color:black"></i>
+              </a>
+            </span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
