--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
   </nav>
   <div class="mt-5">
 
-    <div id="lashModelCarousel" class="carousel slide position-relative w-100 h-100" data-ride="carousel" data-interval="4000">
+    <div id="lashModelCarousel" class="carousel slide position-relative" data-ride="carousel" data-interval="4000">
       <div class="position-absolute absolute-center w-100" style="z-index: 10;">
-        <h1 class="text-white display-1 font-weight-normal">Savannah Jewels Beauty</h1>
-        <button class="btn btn-primary btn-lg">Shop Lashes</button>
+        <h1 id="homeCarouselHeader" class="text-white text-uppercase">Savannah Jewels Beauty</h1>
+        <button class="btn btn-primary btn-lg text-uppercase">Shop Lashes</button>
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -63,7 +63,7 @@
       </div>
     </div>
   
-    <div class="parallax" style="height: 550px; background-color: black;">
+    <div class="parallax" style="background-color: black;">
       <div class="d-flex flex-column justify-content-center text-center">
         <h1 class="display-4 text-white">Glamorous Lashes</h1>
         <button class="btn btn-outline-primary btn-lg m-auto">Shop Now</button>
@@ -71,39 +71,6 @@
           <image class="portfolioItem"  src="./images/lashOne.jpg"/>
           <image class="portfolioItem"  src="./images/lashTwo.jpg"/>
           <image class="portfolioItem"  src="./images/lashThree.jpg"/>
-        </div>
-      </div>
-    </div>
-
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-6 parallax-relative" style="background-image: url(/images/jewels-green-grass.jpg);">
-          <div class="position-absolute" style="right: 0; top: 50%; transform: translateY(-50%);">
-            <div class="card bg-dark text-white" style="width: 18rem;">
-              <div class="card-body">
-                <h5 class="card-title">Follow Me</h5>
-                <p class="card-text">Follow me on instagram to see my latest work or to stay updated on the latest deals.</p>
-                <a href="https://www.instagram.com/savannahjewelsbeauty.amara/?hl=en" class="iconButton">
-                  <i class="fa fa-instagram" style="font-size:48px;color:white"></i>
-                  <div class="cardButtonText" style="color: white">Follow</div>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-6 parallax-relative" style="background-image: url(/images/jewels-winter-snow.jpg);">
-          <div class="position-absolute" style="left: 0; top: 50%; transform: translateY(-50%);">
-            <div class="card bg-light" style="width: 18rem;">
-              <div class="card-body">
-                <h5 class="card-title">Like My Page</h5>
-                <p class="card-text">Like my page on Facebook to see my latest work or to stay updated on the latest deals.</p>
-                <a href="https://www.instagram.com/savannahjewelsbeauty.amara/?hl=en" class="iconButton">
-                  <i class="fa fa-facebook" style="font-size:48px;color:black"></i>
-                  <div class="cardButtonText" style="color: black">Like on facebook</div>
-                </a>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
     </div>
