Adds Scheduling Page

--- a/about/index.html
+++ b/about/index.html
@@ -21,8 +21,8 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="/portfolio.html">Portfolio</a>
-        <a class="nav-item nav-link" href="#">Schedule/Pricing</a>
+        <a class="nav-item nav-link" href="/portfolio">Portfolio</a>
+        <a class="nav-item nav-link" href="/scheduling">Schedule/Pricing</a>
         <a class="nav-item nav-link active" href="#">About</a>
       </div>
     </div>
@@ -38,12 +38,26 @@
       <div class="container text-center py-5">
         <div class="row justify-content-center">
           <div class="col-12 col-md-6">
-            <p>I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me to add your own content and make changes to the font. Feel free to drag and drop me anywhere you like on your page. I’m a great place for you to tell a story and let your users know a little more about you.</p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+              Aenean laoreet commodo quam, id fermentum augue fringilla ac. 
+              Etiam nec augue laoreet, pharetra orci ut, hendrerit tellus. 
+              Phasellus malesuada maximus elit sit amet convallis. 
+              Aenean id justo at dui aliquet pretium. 
+              Aenean aliquet purus lacus, id consectetur neque sagittis in.
+            </p>
           </div>
         </div>
         <div class="row justify-content-center">
           <div class="col-12 col-md-6">
-            <p class>This is a great space to write long text about your company and your services. You can use this space to go into a little more detail about your company. Talk about your team and what services you provide. Tell your visitors the story of how you came up with the idea for your business and what makes you different from your competitors. Make your company stand out and show your visitors who you are.</p>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+              Aenean laoreet commodo quam, id fermentum augue fringilla ac. 
+              Etiam nec augue laoreet, pharetra orci ut, hendrerit tellus. 
+              Phasellus malesuada maximus elit sit amet convallis. 
+              Aenean id justo at dui aliquet pretium. 
+              Aenean aliquet purus lacus, id consectetur neque sagittis in.
+            </p>          
           </div>
         </div>
       </div>
@@ -53,7 +67,7 @@
       <div class="row">
         <div class="col-12 col-md-6 parallax-relative" style="background-image: url(/images/jewels-green-grass.jpg);">
           <div class="dual-img-card-1">
-            <div class="card bg-dark text-white" style="width: 18rem;">
+            <div class="card bg-dark text-white" style="width: 18rem; background-color: #343a40de !important;">
               <div class="card-body">
                 <h5 class="card-title">Follow Me</h5>
                 <p class="card-text">Follow me on instagram to see my latest work or to stay updated on the latest deals.</p>
@@ -67,7 +81,7 @@
         </div>
         <div class="col-12 col-md-6  parallax-relative" style="background-image: url(/images/jewels-winter-snow.jpg);">
           <div class="dual-img-card-2">
-            <div class="card bg-light" style="width: 18rem;">
+            <div class="card bg-light" style="width: 18rem; background-color: #f8f9fae3 !important;">
               <div class="card-body">
                 <h5 class="card-title">Like My Page</h5>
                 <p class="card-text">Like my page on Facebook to see my latest work or to stay updated on the latest deals.</p>
