--- a/scheduling/index.html
+++ b/scheduling/index.html
@@ -66,7 +66,7 @@
               <option value="3">Light</option>
             </select>
           </div>
-          <button class="btn btn-primary bt-lg">Schedule</button>
+          <a href="/scheduling/calendar" class="btn btn-primary bt-lg" >Schedule</a>
         </div>
           <!-- details -->
         </div>
