--- a/scheduling/calendar.html
+++ b/scheduling/calendar.html
@@ -17,9 +17,9 @@
 
     <script type="text/javascript">
       // Client ID and API key from the Developer Console
-      var CLIENT_ID = '';
-      var API_KEY = '';
-      var CALENDAR_ID = '';
+      var CLIENT_ID = '1029596788185-dtupqpvpoeql9b88h49rg9sc7n1qjau7.apps.googleusercontent.com';
+      var API_KEY = 'AIzaSyDJqgWeJX2RUqqbM4-au4fa58c4cPBfvoo';
+      var CALENDAR_ID = 'efbgjv5tk4t9kf61ql54gntdsk@group.calendar.google.com';
 
       // Array of API discovery doc URLs for APIs used by the quickstart
       var DISCOVERY_DOCS = ["https://www.googleapis.com/discovery/v1/apis/calendar/v3/rest"];
