--- a/scheduling/customCalendar.html
+++ b/scheduling/customCalendar.html
@@ -33,10 +33,14 @@
       </ul>
     </div>
 
+    <div id="selectedDate">
+      
+    </div>
+
     <!--Add buttons to initiate auth sequence and sign out-->
     <!-- <button id="authorize_button" style="display: none;">Authorize</button>
     <button id="signout_button" style="display: none;">Sign Out</button> -->
-    <button id="get_events"> Events </button>
+    <!-- <button id="get_events"> Events </button> -->
     <pre id="content" style="white-space: pre-wrap;"></pre>
     <!--Displays the calendar not actually part of the api. This iframe was from another source.-->
     <!-- <iframe src="https://calendar.google.com/calendar/embed?src=efbgjv5tk4t9kf61ql54gntdsk%40group.calendar.google.com&ctz=America%2FDenver" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe> -->
