circle style for events

--- a/scheduling/customCalendar.html
+++ b/scheduling/customCalendar.html
@@ -33,13 +33,13 @@
         </tr>
         <tbody id="daysList" class="days">
           <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td><span></span></td><span></span>
+            <td></td><span></span>
+            <td></td><span></span>
+            <td></td><span></span>
+            <td></td><span></span>
+            <td></td><span></span>
+            <td></td><span></span>
           </tr>
           <tr>
             <td></td>
@@ -51,40 +51,40 @@
             <td></td>
           </tr>
           <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td><span></span></td><span></span>
+            <td><span></span></td><span></span>
+            <td><span></span></td><span></span>
+            <td><span></span></td><span></span>
+            <td><span></span></td><span></span>
+            <td><span></span></td><span></span>
+            <td><span></span></td><span></span>
           </tr>
           <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td><span></span></td><span></span>
+            <td><span></span></td><span></span>
+            <td><span></span></td><span></span>
+            <td><span></span></td><span></span>
+            <td><span></span></td><span></span>
+            <td><span></span></td><span></span>
+            <td><span></span></td><span></span>
           </tr>
           <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td><span></span></td><span></span>
+            <td><span></span></td><span></span>
+            <td><span></span></td><span></span>
+            <td><span></span></td><span></span>
+            <td><span></span></td><span></span>
+            <td><span></span></td><span></span>
+            <td><span></span></td><span></span>
           </tr>
           <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td><span></span></td><span></span>
+            <td><span></span></td><span></span>
+            <td><span></span></td><span></span>
+            <td><span></span></td><span></span>
+            <td><span></span></td><span></span>
+            <td><span></span></td><span></span>
+            <td><span></span></td><span></span>
           </tr>
         </tbody>
       </table>
