--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -20,8 +20,8 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
-        <a class="nav-item nav-link" href="/portfolio/">Portfolio</a>
+        <a class="nav-item nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link active" href="/portfolio/">Portfolio</a>
         <a class="nav-item nav-link" href="/scheduling/">Schedule/Pricing</a>
         <a class="nav-item nav-link" href="/about/">About</a>
       </div>
