--- a/scheduling/index.html
+++ b/scheduling/index.html
@@ -28,7 +28,7 @@
     </div>
   </nav>
 
-  <div class="mt-5" style="background: url(/images/repeatinglashesinverse.jpg); padding: 30px;">
+  <div class="mt-5" style="background: url(/images/repeatinglashesinverse.jpg); padding: 30px; height: 80vh;">
     <div class="container">
       <div class="row">
         <div class="col-12 col-md-4">
@@ -66,7 +66,7 @@
               <option value="3">Light</option>
             </select>
           </div>
-          <a href="/scheduling/calendar" class="btn btn-primary bt-lg" >Schedule</a>
+          <a href="/scheduling/customCalendar.html" class="btn btn-primary bt-lg" >Schedule</a>
         </div>
           <!-- details -->
         </div>
