--- a/scheduling/Calendar.html
+++ b/scheduling/Calendar.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="./calendar.css">
 </head>
 
-<body>
+<body style="background-color: #f8f9fa;">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark position-fixed fixed-top" >
     <a class="navbar-brand" href="/">SJB</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,10 +25,10 @@
       </div>
     </div>
   </nav>
-  <h3 style="margin: 60px 0 0 10px;">Savannah Jewel's Appointment Calendar</h3>
+  <h3 style="margin: 60px 0 0 20px;">Savannah Jewel's Appointment Calendar</h3>
 
-  <div class="row w-100">
-    <div id="calendar" class="col-12 col-md-8">
+  <div class="row w-100" style="background-color: white; margin: auto;">
+    <div id="calendar" class="col-12 col-md-8" >
       <div class="month">
         <ul>
           <li id="prev">&#10094;</li>
@@ -117,7 +117,7 @@
     
   </div>
 
-  <footer class="bg-light">
+  <footer class="bg-light" >
     <div class="container p-5">
       <div class="row justify-content-around text-center">
         <div class="col-12 col-md-6">
