--- a/scheduling/index.html
+++ b/scheduling/index.html
@@ -12,7 +12,7 @@
   <link rel="icon" type="image/jpg" href="/images/favicon.jpg" />
   <title>Savannah Jewels Beauty</title>
 </head>
-<body>
+<body style="background-color: #f8f9fa;">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark position-fixed fixed-top">
     <a class="navbar-brand" href="/">SJB</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,7 +28,7 @@
     </div>
   </nav>
 
-  <div class="mt-5" style="background: url(/images/repeatinglashesinverse.jpg); padding: 30px; height: 80vh;">
+  <div class="mt-5" style="background: url(/images/repeatinglashesinverse.jpg); padding: 30px; ">
     <div class="container">
       <div class="row">
         <div class="col-12 col-md-4">
@@ -66,7 +66,7 @@
               <option value="3">Light</option>
             </select>
           </div>
-          <a href="/scheduling/customCalendar.html" class="btn btn-primary bt-lg" >Schedule</a>
+          <a href="/scheduling/Calendar.html" class="btn btn-primary bt-lg" >Schedule</a>
         </div>
           <!-- details -->
         </div>
