replaced filler text on home page

--- a/index.html
+++ b/index.html
@@ -50,16 +50,14 @@
       </div>
     </div>
 
-    <div class="jumbotron jumbotron-fluid mb-0">
+    <div class="mb-0 jumbotron jumbotron-fluid">
       <div class="container py-4">
         <h1 class="display-4">THE WOW EFFECT. ALL DAY LONG.</h1>
         <p class="lead">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-          Aenean laoreet commodo quam, id fermentum augue fringilla ac. 
-          Etiam nec augue laoreet, pharetra orci ut, hendrerit tellus. 
-          Phasellus malesuada maximus elit sit amet convallis. 
-          Aenean id justo at dui aliquet pretium. 
-          Aenean aliquet purus lacus, id consectetur neque sagittis in.
+          Semi-permanent lashes give longer, thicker and natural looking lashes that can last as long as your lash cycle. 
+          Virtually weightless and applied to your own lashes one by one. Darker than your own lashes there is simply no need to wear mascara. 
+          Shower, swim, sleep or cry they won’t fall out! Offering 3 different types of semi-permanent lashes. 
+          Silk Lashes, Mink Lashes and Volume Lashes
         <p>        
         <div class="text-secondary">Learn More</div>
       </div>
@@ -74,9 +72,9 @@
     </div>
   
     <div class="parallax" style="background-color: black;">
-      <div class="d-flex flex-column justify-content-center text-center">
-        <h1 class="display-4 text-white">Glamorous Lashes</h1>
-        <button class="btn btn-outline-primary btn-lg m-auto">Shop Now</button>
+      <div class="text-center d-flex flex-column justify-content-center">
+        <h1 class="text-white display-4">Glamorous Lashes</h1>
+        <button class="m-auto btn btn-outline-primary btn-lg">Shop Now</button>
         <div class="portfolioContainer" style="grid-template-rows: repeat(1, 30vw);">
           <image class="portfolioItem"  src="./images/lashOne.jpg"/>
           <image class="portfolioItem"  src="./images/lashTwo.jpg"/>
@@ -89,13 +87,13 @@
 
   <footer class="bg-light">
     <div class="container p-5">
-      <div class="row justify-content-around text-center">
+      <div class="text-center row justify-content-around">
         <div class="col-12 col-md-6">
           <div class="row justify-content-center">
-            <a href="https://www.instagram.com/savannahjewelsbeauty.amara/?hl=en" target="_blank" class="iconButton mx-3">
+            <a href="https://www.instagram.com/savannahjewelsbeauty.amara/?hl=en" target="_blank" class="mx-3 iconButton">
               <i class="fa fa-instagram" style="font-size:24px;color:black"></i>
             </a>
-            <a href="https://www.instagram.com/savannahjewelsbeauty.amara/?hl=en" target="_blank" class="iconButton mx-3">
+            <a href="https://www.instagram.com/savannahjewelsbeauty.amara/?hl=en" target="_blank" class="mx-3 iconButton">
               <i class="fa fa-facebook" style="font-size:24px;color:black"></i>
             </a>
           </div>
@@ -103,7 +101,7 @@
         <div class="col-12 col-md-6">
           <div class="row justify-content-center">
             Website Developed by Martinez & Black <span>
-              <a href="https://github.com/nmartinezbyu/SavannahJewelsBeauty/tree/master" target="_blank" class="iconButton mx-3">
+              <a href="https://github.com/nmartinezbyu/SavannahJewelsBeauty/tree/master" target="_blank" class="mx-3 iconButton">
                 <i class="fa fa-github" style="font-size:24px;color:black"></i>
               </a>
             </span>
