got rid of filler text

--- a/about/index.html
+++ b/about/index.html
@@ -39,24 +39,24 @@
         <div class="row justify-content-center">
           <div class="col-12 col-md-6">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-              Aenean laoreet commodo quam, id fermentum augue fringilla ac. 
-              Etiam nec augue laoreet, pharetra orci ut, hendrerit tellus. 
-              Phasellus malesuada maximus elit sit amet convallis. 
-              Aenean id justo at dui aliquet pretium. 
-              Aenean aliquet purus lacus, id consectetur neque sagittis in.
+              Hello, my name is Savannah Jewel Martinez. I would love to
+              do your lashes. I am originally from Sanger Texas but moved 
+              to Utah with my husband in 2018. My husband is the reason I 
+              got into the lash buisness. He has the best lashes in the world.
+              If he blinks fast enough, he can fly. It's how he stole my heart.
+              If you want lashes like him, I would love to give them to you.
             </p>
           </div>
         </div>
         <div class="row justify-content-center">
           <div class="col-12 col-md-6">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-              Aenean laoreet commodo quam, id fermentum augue fringilla ac. 
-              Etiam nec augue laoreet, pharetra orci ut, hendrerit tellus. 
-              Phasellus malesuada maximus elit sit amet convallis. 
-              Aenean id justo at dui aliquet pretium. 
-              Aenean aliquet purus lacus, id consectetur neque sagittis in.
+              My husband and I have a cat named Dexter. He too has a nice 
+              set of lashes. He gets all the kitty cats in town. Dexter is 
+              a trained boxer. His paws are registered weapons. Dexter has 
+              been to jail 3 times. Serving a life sentence each time. I 
+              would not mess with him if I were you. Even I am scared of him.
+              Anyways, let me do your lashes. 
             </p>          
           </div>
         </div>
